plugins {
    id 'java'
}

group 'CocaCola'
version '1.0-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'maven'
apply plugin: 'eclipse'
apply plugin: 'jacoco'
apply plugin: 'checkstyle'
apply plugin: 'signing'
apply plugin: 'maven-publish'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
    jcenter()

    maven { url "https://mvnrepository.com/artifact/com.sikulix/sikulixapi" }
    maven { url "https://mvnrepository.com/artifact/jxgrabkey/jxgrabkey" }
    maven { url "https://mvnrepository.com/artifact/org.sikuli/sikuli-api" }
    maven { url "https://jitpack.io" }
    maven { url "http://repo.maven.apache.org/maven2" }
    maven { url "https://mvnrepository.com/artifact/com.google.android/android" }

    flatDir {
        dirs 'libs'
    }
}

task entireSuiteCucumber(type: Test) {

    useJUnit()

    systemProperty 'some.prop', 'value'
    include 'cucumber/cucumberRunner/CucumberRunner.class'

    testLogging.showStandardStreams = true

    minHeapSize = "128m"
    maxHeapSize = "512m"

    jvmArgs '-XX:MaxPermSize=256m'

    beforeTest { descriptor ->
        logger.lifecycle("Runnin test: " + descriptor)
    }

}

dependencies {
    testCompile group: 'info.cukes', name: 'cucumber-picocontainer', version: '1.2.5'
    compile group: 'net.sf.flexjson', name: 'flexjson', version: '3.3'
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.6'
    compile group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'
    compile group: 'com.fasterxml', name: 'jackson-xml-databind', version: '0.6.2'
    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
    compile 'com.google.code.gson:gson:2.8.5'
    compile group: 'com.google.api-client', name: 'google-api-client', version: '1.25.0'
    compile group: 'com.jcabi', name: 'jcabi-aspects', version: '0.22.6'
    testCompile group: 'info.cukes', name: 'cucumber-junit', version: '1.2.5'
    compile group: 'info.cukes', name: 'cucumber-java', version: '1.2.5'
    compile group: 'info.cukes', name: 'cucumber-core', version: '1.2.5'
    compile group: 'io.cucumber', name: 'gherkin', version: '5.1.0'
    compile fileTree(dir: 'libs', include: ['*.jar'])
    testCompile group: 'org.testng', name: 'testng', version: '6.9.10'
    compile group: 'com.google.android', name: 'android', version: '4.1.1.4'
    compile group: 'io.appium', name: 'java-client', version: '6.1.0'
    testCompile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.12.0'
    compile 'org.apache.maven.surefire:surefire:2.20.1'
    compile group: 'org.seleniumhq.selenium', name: 'selenium-api', version: '3.8.1'
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'log4j', name: 'log4j', version: '1.2.17'
    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
    compile group: 'javax.mail', name: 'javax.mail-api', version: '1.5.6'
    compile group: 'org.jsoup', name: 'jsoup', version: '1.8.3'
    compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.10.0'
    compile group: 'com.sun.mail', name: 'smtp', version: '1.6.1'
    testCompile 'org.hamcrest:hamcrest-library:1.3'
    compile 'org.openpnp:opencv:3.2.0-1'
    compile group: 'com.sun.mail', name: 'javax.mail', version: '1.6.2'
    compile('com.sikulix:sikulixapi:1.1.0') {
        exclude module: '${sikulix.libs}'
    }
    switch (System.getProperty('os.name').toLowerCase().split()[0]) {
        case 'windows':
            compile group: 'com.sikulix', name: 'sikulixlibswin', version: '1.1.0'
            break
        case 'linux':
            compile group: 'com.sikulix', name: 'sikulixlibslux', version: '1.1.0'
            break
        case 'mac':
            compile group: 'com.sikulix', name: 'sikulixlibsmac', version: '1.1.0' // MAC
            break
        default:
            throw new Exception('Unknown OS')
    }

}
